--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "mysql": "^2.18.1",
